<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="15dp"
    tools:context="com.example.lifeorganiser.src.controllers.AddTaskDialog">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/what"/>
            <EditText
                android:id="@+id/addTaskEventName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:hint="@string/event_name"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/when"/>
            <DatePicker
                android:id="@+id/addTaskDatePicker"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

            </DatePicker>
            <TimePicker
                android:id="@+id/addTaskTimePicker"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
            </TimePicker>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/why"/>
            <EditText
                android:id="@+id/addTaskDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:hint="@string/event_description"/>
            <CheckBox
                android:id="@+id/addTaskIsPayable"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/is_payable"/>
            <RadioGroup
                android:id="@+id/addTaskRadioGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:visibility="invisible"
                android:orientation="horizontal">
                <RadioButton
                    android:id="@+id/incomeRadio"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/income"/>
                <RadioButton
                    android:id="@+id/expensesRadio"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/expenses"/>
            </RadioGroup>
            <TextView
                android:id="@+id/addTaskHowMuch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:visibility="invisible"
                android:text="@string/how_much"/>
            <EditText
                android:id="@+id/addTaskAmount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:visibility="invisible"
                android:inputType="number"
                android:hint="@string/amount"/>
        </LinearLayout>
    </ScrollView>



</FrameLayout>
