<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".src.controllers.todoFragments.AddTODODialogFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/what"/>
        <EditText
            android:id="@+id/addTODOName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/goal"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/how"/>
        <EditText
            android:id="@+id/addTODODescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/optional_description"/>
    </LinearLayout>

</ScrollView>
