<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".src.controllers.accountFragments.AddAccountDialogFragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/what"/>
    <EditText
        android:id="@+id/addAccountName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/accountName"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/howMuch"/>
    <EditText
        android:id="@+id/addAccountAmount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:text="0"/>

</LinearLayout>
