<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    tools:context=".src.controllers.LogInActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3"
            android:src="@drawable/logo"/>
        <EditText
            android:id="@+id/userNameEditText"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:hint="@string/username"/>
        <EditText
            android:id="@+id/passwordEditText"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:inputType="textPassword"
            android:hint="@string/password"/>

        <Button
            android:id="@+id/loginActivityLogInUp"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/logIn"/>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="4"
            android:gravity="center_horizontal">
            <TextView
                android:id="@+id/signUpTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:textSize="20sp"
                android:text="@string/signUp"/>
            <TextView
                android:id="@+id/forgottenPWView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/forgottenPW"
                android:layout_alignParentBottom="true"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp"
                android:textSize="20sp"
                android:layout_toRightOf="@id/signUpTextView"
                android:layout_toEndOf="@id/signUpTextView"/>

        </RelativeLayout>
    </LinearLayout>
</RelativeLayout>
