<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.lifeorganiser.src.controllers.TODOFragment">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_gravity=""
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:text="@string/todoList"/>

        <TextView
            android:id="@+id/todoFragmentShortTermText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/shortTermGoals"/>
        <ListView
            android:id="@+id/todoFragmentShortTermListView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/todoFragmentMidTermText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/midTermGoals"/>
        <ListView
            android:id="@+id/todoFragmentMidTermListView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/todoFragmentLongTermText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/longTermGoals"/>
        <ListView
            android:id="@+id/todoFragmentLongTermListView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </LinearLayout>
</ScrollView>
