<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    tools:context=".src.controllers.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="20dp"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/fragmentLayout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3"
            android:orientation="vertical">

        </LinearLayout>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:src="@drawable/logo"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="200dp"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/colorOrange"
        android:layout_gravity="start">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:src="@drawable/organiser_icon"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:layout_marginTop="20dp"
            android:gravity="center_horizontal"
            android:orientation="vertical">
            <TextView
                android:id="@+id/todayNavigationTodayTextView"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:text="@string/today"/>
            <TextView
                android:id="@+id/todayNavigationTODOTextView"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:text="@string/todoList"/>
            <TextView
                android:id="@+id/todayNavigationCalendarTextView"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:text="@string/calendar"/>
            <TextView
                android:id="@+id/todayNavigationTasksTextView"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:text="@string/tasks"/>
            <TextView
                android:id="@+id/todayNavigationAccountTextView"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:text="@string/account"/>
            <TextView
                android:id="@+id/todayNavigationShoppingTextView"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:text="@string/shoppingLists"/>
        </LinearLayout>
    </LinearLayout>

</android.support.v4.widget.DrawerLayout>
