<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    tools:context=".src.controllers.SignUpActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3"
            android:src="@drawable/logo"/>

        <EditText
            android:id="@+id/signUpEmailEditText"
            android:layout_width="match_parent"
            android:inputType="textEmailAddress"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:hint="@string/email"/>

        <EditText
            android:id="@+id/signUpUsernameEditText"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:hint="@string/username"/>
        <EditText
            android:id="@+id/signUpPassEditText"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:inputType="textPassword"
            android:hint="@string/password"/>
        <EditText
            android:id="@+id/signUpRepeatPassEditText"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:inputType="textPassword"
            android:hint="@string/password"/>
        <Button
            android:id="@+id/signUpSignUpButton"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/signUp"/>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

        </RelativeLayout>
    </LinearLayout>
</RelativeLayout>
