<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.lifeorganiser.src.controllers.shoppingListFragments.PayShoppingListFragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pay"
        android:gravity="center_horizontal"
        android:textSize="30sp"/>
    <TextView
        android:id="@+id/payShoppingListName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="SLName"
        android:layout_margin="10dp"
        android:gravity="center_horizontal"
        android:textSize="20sp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pickPrice"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
            <RadioGroup
                android:id="@+id/payShoppingListRadioGroup"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="10dp">
                <RadioButton
                    android:id="@+id/payShoppingListTotalRadio"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/total"/>
                <RadioButton
                    android:id="@+id/payShoppingListSelectedRadio"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/selected"/>
                <RadioButton
                    android:id="@+id/payShoppingListOtherRadio"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/other"/>
            </RadioGroup>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <TextView
                android:id="@+id/payShoppingListTotalText"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:text="0"/>

            <TextView
                android:id="@+id/payShoppingListSelectedText"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:text="0"/>

            <EditText
                android:id="@+id/payShoppingListOtherEditText"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:inputType="numberDecimal"
                android:text="0"/>
        </LinearLayout>
    </LinearLayout>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pickAccount"/>

    <Spinner
        android:id="@+id/payShoppingListAccountPicker"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/payShoppingListCancelButton"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="10"
            android:text="@string/cancel"/>
        <Space
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"/>
        <Button
            android:id="@+id/payShoppingListPayButton"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="10"
            android:text="@string/pay"/>
    </LinearLayout>
</LinearLayout>
