<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".src.controllers.shoppingListFragments.ShoppingListViewFragment">
    <TextView
        android:id="@+id/shoppingListViewName"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:textSize="30sp"
        android:layout_weight="1"
        android:layout_margin="10dp"
        android:gravity="center_horizontal"
        android:text="Shopping list name"/>
    <ListView
        android:id="@+id/shoppingListViewListView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="9"/>
    <TextView
        android:id="@+id/shoppingListViewAdd"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.5"
        android:text="@string/add"
        android:gravity="center"/>
    <LinearLayout
        android:id="@+id/shoppingListViewTotalLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:visibility="gone"
        android:gravity="center_vertical"
        android:layout_weight="1">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:textSize="20sp"
            android:text="@string/total"/>
        <TextView
            android:id="@+id/shoppingListViewTotalSum"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:layout_weight="2"
            android:text="0"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:textSize="20sp"
            android:text="@string/selected"/>
        <TextView
            android:id="@+id/shoppingListViewSelectedSum"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:layout_weight="2"
            android:text="0"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="5dp"
        android:layout_weight="1.2">
        <Button
            android:id="@+id/shoppingListViewCalcButton"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="10"
            android:text="@string/calculate"/>
        <Space
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"/>
        <Button
            android:id="@+id/shoppingListViewPayButton"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="10"
            android:text="@string/pay"/>
    </LinearLayout>
</LinearLayout>
