<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".src.controllers.accountFragments.AccountViewFragment">

    <TextView
        android:id="@+id/accountViewName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="name"
        android:gravity="center_horizontal"/>
    <TextView
        android:id="@+id/accountViewAmount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="balance"
        android:gravity="center_horizontal"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal">
        <TextView
            android:id="@+id/accountViewAdd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="|"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"/>
        <TextView
            android:id="@+id/accountViewWithdraw"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/withdraw"/>
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/history"/>
    <ListView
        android:id="@+id/accountViewHistoryList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
</LinearLayout>
